--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^17.0.1",
+    "react-native-linear-gradient-degree": "0.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "reactstrap": "^8.7.1",
